--- a/netflix-user/src/main/resources/application.yml
+++ b/netflix-user/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 7001
+  port: 9001
 
 spring:
   application:
-    name: netflix-category
+    name: netflix-user
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
