--- a/netflix-category/src/main/resources/application.yml
+++ b/netflix-category/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 7001
+  
+eureka:  client:    service-url:      defaultZone: http://localhost:8761/eureka
 
 spring:
   application:
