--- a/netflix-user/src/main/resources/application.yml
+++ b/netflix-user/src/main/resources/application.yml
@@ -1,10 +1,5 @@
 server:
-  port: 9001
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  port: ${PORT:0}
 
 spring:
   application:
@@ -28,3 +23,10 @@ spring:
     baseline-on-migrate: true
     locations:
       - classpath:db/migration
+      
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
