--- a/netflix-movies/src/main/resources/application.yml
+++ b/netflix-movies/src/main/resources/application.yml
@@ -1,5 +1,4 @@
-server:  port: 8001
-eureka:  client:    service-url:      defaultZone: http://localhost:8761/eureka
-spring:
+server:  port: ${PORT:0}
+spring:
   application:
-    name: netflix-movies  datasource:    url: jdbc:h2:mem:testdb    username: sa    password:   h2:    console:      enabled: true      path: /h2-console  jpa:    show-sql: true    database-platform: org.hibernate.dialect.H2Dialect    open-in-view: false    properties:      hibernate:        format_sql: true   flyway:    baseline-on-migrate: true    locations:      - classpath:db/migration
+    name: netflix-movies  datasource:    url: jdbc:h2:mem:testdb    username: sa    password:   h2:    console:      enabled: true      path: /h2-console  jpa:    show-sql: true    database-platform: org.hibernate.dialect.H2Dialect    open-in-view: false    properties:      hibernate:        format_sql: true   flyway:    baseline-on-migrate: true    locations:      - classpath:db/migrationeureka:  client:    service-url:      defaultZone: http://localhost:8761/eureka  instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
