Configrando o server client no projeto netflix-category

--- a/netflix-config-server/src/main/resources/application.yml
+++ b/netflix-config-server/src/main/resources/application.yml
@@ -3,5 +3,5 @@ server:  port: 8888
 spring:
   application:
     name: netflix-config-server
-  cloud:    config:      server:        git:          default-label: main          uri: qqq          username: oo          password: oo
+  cloud:    config:      server:        git:          default-label: main          uri: https://github.com/sironAzevedo/netflix-configurations#          username: ${GITHUB_USER}#          password: ${GITHUB_PASS}
     
