--- a/netflix-user/src/main/resources/bootstrap.yml
+++ b/netflix-user/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: netflix-category
+    name: netflix-user
   cloud:
     config:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888}
