Projeto netflix-authorization implementando

--- a/netflix-gateway/src/main/resources/application.yml
+++ b/netflix-gateway/src/main/resources/application.yml
@@ -19,6 +19,9 @@ zuul:  routes:    category:
     user:
       service-id: netflix-user
       path: /netflix-user/**
+    authorization:
+      service-id: netflix-authorization
+      path: /netflix-authorization/**
       
 hystrix:
   command:
