Implementando o login JWT token

--- a/netflix-gateway/src/main/resources/application.yml
+++ b/netflix-gateway/src/main/resources/application.yml
@@ -22,6 +22,7 @@ zuul:  routes:    category:
     authorization:
       service-id: netflix-authorization
       path: /netflix-authorization/**
+      sensitive-headers: Cookie,Set-Cookie
       
 hystrix:
   command:
