--- a/netflix-gateway/pom.xml
+++ b/netflix-gateway/pom.xml
@@ -52,6 +52,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
