--- a/netflix-configurations/netflix-category-prod.yml
+++ b/netflix-configurations/netflix-category-prod.yml
@@ -1,18 +1,30 @@
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
-
 spring:
     datasource:
-        url=jdbc: jdbc:postgresql://netflix-category-pg12:5432/db_netflix-category
+        url: jdbc:postgresql://netflix-category-pg12:5432/db_netflix-category
+        driver-class-name: org.postgresql.Driver
         username: postgres
         password: root
+        initialization-mode: never
+        tomcat:
+          test-while-idle: true
+          validation-query: SELECT 1
     jpa:
-        properties:
-            hibernate:
-                jdbc:
-                    lob:
-                        non-contextual-creation: true
+        show-sql: true
+        database-platform: org.hibernate.dialect.PostgreSQL9Dialect
+        open-in-view: false
         hibernate:
             ddl-auto: none
+        properties:
+            hibernate:
+                format_sql: true
+                default_schema: public
+                dialect: org.hibernate.dialect.PostgreSQLDialect
+                jdbc:
+                    lob:
+                        non_contextual_creation: true
+                    temp:
+                        use_jdbc_metadata_defaults: false
+    flyway:
+        baseline-on-migrate: true
+        locations:
+            - classpath:db/migration
