Configurando os container references

--- a/netflix-category/src/main/resources/bootstrap.yml
+++ b/netflix-category/src/main/resources/bootstrap.yml
@@ -5,6 +5,7 @@ spring:
     active: ${ENVIRONMENT:test}
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
+#      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
+      uri: ${CONFIG_SERVER_URL:http://netflix-config-server:8888} #Esta url estar apontando para o container docker
 
 management:  endpoints:    web:      exposure:        include: '*'
