--- a/netflix-gateway/src/main/resources/application.yml
+++ b/netflix-gateway/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+#      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://netflix-eureka-server:8761/eureka #Esta url estar apontando para o container docker
       
 zuul:  routes:    category:
       service-id: netflix-category
