--- a/netflix-authorization/src/main/resources/bootstrap.yml
+++ b/netflix-authorization/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: netflix-authorization
   cloud:
     config:
-#      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
-      uri: ${CONFIG_SERVER_URL:http://netflix-config-server:8888} #Esta url estar apontando para o container docker
+      #uri: http://netflix-config-server:8888 #Esta url estar apontando para o container docker
+      uri: ${URL_CONFIG_SERVER:http://localhost:8888}
 
 management:  endpoints:    web:      exposure:        include: '*'
