--- a/netflix-category/src/main/resources/application.yml
+++ b/netflix-category/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: netflix-category
   
-eureka:  client:    service-url:      #defaultZone: http://localhost:8761/eureka
-      defaultZone: http://netflix-eureka-server:8761/eureka #Estar url estar apontando para o container docker
+eureka:  client:    service-url:      #defaultZone: http://netflix-eureka-server:8761/eureka #Esta url aponta para o container docker
+      defaultZone: ${URL_EUREKA_SERVER:http://localhost:8761/eureka}
   instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
