--- a/netflix-configurations/netflix-help-desk-prod.yml
+++ b/netflix-configurations/netflix-help-desk-prod.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5433/db_netflix_movies
+        url: jdbc:postgresql://netflix-help-desk-pg12:5432/db_netflix-help-desk
         driver-class-name: org.postgresql.Driver
         username: postgres
         password: root
