--- a/netflix-movies/pom.xml
+++ b/netflix-movies/pom.xml
@@ -109,6 +109,18 @@
 				spring-cloud-starter-netflix-hystrix
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
