--- a/netflix-authorization/src/main/resources/application.yml
+++ b/netflix-authorization/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: netflix-authorization
+  zipkin:
+    base-url: http://localhost:9411/
 
 eureka:
   client:
