--- a/netflix-movies/src/main/resources/application.yml
+++ b/netflix-movies/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 server:  port: ${PORT:0}
 spring:
   application:
-    name: netflix-movieseureka:  client:    service-url:      #defaultZone: http://netflix-eureka-server:8761/eureka #Esta url aponta para o container docker      defaultZone: ${URL_EUREKA_SERVER:http://localhost:8761/eureka}  instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}feign:    hystrix:        enabled: true
+    name: netflix-movies  zipkin:    base-url: http://localhost:9411/eureka:  client:    service-url:      #defaultZone: http://netflix-eureka-server:8761/eureka #Esta url aponta para o container docker      defaultZone: ${URL_EUREKA_SERVER:http://localhost:8761/eureka}  instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}feign:    hystrix:        enabled: true
