--- a/netflix-category/src/main/resources/application.yml
+++ b/netflix-category/src/main/resources/application.yml
@@ -6,7 +6,12 @@ spring:
     name: netflix-category
   zipkin:
     base-url: http://localhost:9411/
-  
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
+    
 eureka:  client:    service-url:      #defaultZone: http://netflix-eureka-server:8761/eureka #Esta url aponta para o container docker
       defaultZone: ${URL_EUREKA_SERVER:http://localhost:8761/eureka}
   instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
